--- a/user-manual/github-actions.html
+++ b/user-manual/github-actions.html
@@ -16,7 +16,7 @@
 <li class="nav-list-item">
 <a href="https://soostone.github.io/fundamentals/" class="nav-list-link"> Fundamentals </a> <ul>
 <li> <a href="/fundamentals/#getting-started" class="nav-list-link"> Getting Started </a> </li>
-<li> <a href="/fundamentals/#bootstrapping-a-napkin-project" class="nav-list-link"> Bootstrapping napkin </a> </li>
+<li> <a href="/fundamentals/#bootstrapping-a-napkin-project" class="nav-list-link"> Bootstrapping Napkin </a> </li>
 <li> <a href="/fundamentals/#adding-computational-steps-to-the-pipeline" class="nav-list-link"> Adding Computations </a> </li>
 <li> <a href="/fundamentals/#specsspecyaml" class="nav-list-link"> specs/spec.yaml </a> </li>
 <li> <a href="/fundamentals/#napkin-cli" class="nav-list-link"> Napkin CLI </a> </li>
@@ -74,7 +74,7 @@
 <li class="nav-list-item">
 <a href="https://soostone.github.io/fundamentals/" class="nav-list-link"> Fundamentals </a> <ul>
 <li> <a href="/fundamentals/#getting-started" class="nav-list-link"> Getting Started </a> </li>
-<li> <a href="/fundamentals/#bootstrapping-a-napkin-project" class="nav-list-link"> Bootstrapping napkin </a> </li>
+<li> <a href="/fundamentals/#bootstrapping-a-napkin-project" class="nav-list-link"> Bootstrapping Napkin </a> </li>
 <li> <a href="/fundamentals/#adding-computational-steps-to-the-pipeline" class="nav-list-link"> Adding Computations </a> </li>
 <li> <a href="/fundamentals/#specsspecyaml" class="nav-list-link"> specs/spec.yaml </a> </li>
 <li> <a href="/fundamentals/#napkin-cli" class="nav-list-link"> Napkin CLI </a> </li>
@@ -164,4 +164,4 @@
           <span class="na">PGPASSWORD</span><span class="pi">:</span> <span class="s">${{ secrets.PGPASSWORD }}</span>
       <span class="pi">-</span> <span class="na">run</span><span class="pi">:</span> <span class="s">napkin run --log-format Server --arg branch=${{ steps.branch-name.outputs.current_branch }}</span>
 
-</code></pre></div></div> </div> </div> <div class="main-content-rspander"></div> <div class="search-overlay"></div> </div> <footer class="site-footer"> <div class="site-footer-rows"> <div class="site-footer-r1"> <div class="white-napkin"></div> <div class="sf-box"> <div class="sfb-nav"> <div class="link-table"> <a href="#" class="">Documentation</a> <a href="#" class="">Community</a> <a href="#" class="">Features</a> </div> <div class="link-table"> <a href="#" class="">Use Cases</a> <a href="#" class="">About Napkin</a> <a href="#" class="">Contact</a> </div> </div> <div class="gradient-border"> <a href="#" class="link-button">Get Napkin</a> </div> </div> </div> <div class="media-bar"> <span class="media-pad"> <a href="#" class="logo fb-logo"></a> </span> <span class="media-pad"> <a href="#" class="logo twitter-logo"></a> </span> <span class="media-pad"> <a href="#" class="logo linked-in-logo"></a> </span> </div> <div class="site-footer-copy-right"> <div class="copyright"> Copyright 2021 ©    |    <a href="#">Privacy Policy</a> </div> <div class="made-with"> Made with <span class="heart-inline"> </span> in NYC </div> </div> </div> </footer> <div class="sortcat-shadow"> </div> <script type="text/javascript" src="/assets/js/copy.js"></script> <script type="text/javascript" src="/assets/js/highlight-active-link.js"></script> </body> </html>
+</code></pre></div></div> </div> </div> <div class="main-content-rspander"></div> <div class="search-overlay"></div> </div> <footer class="site-footer"> <div class="site-footer-rows"> <div class="site-footer-r1"> <div class="white-napkin"></div> <div class="sf-box"> <div class="sfb-nav"> <div class="link-table"> <a href="#" class="">Documentation</a> <a href="#" class="">Community</a> <a href="#" class="">Features</a> </div> <div class="link-table"> <a href="#" class="">Use Cases</a> <a href="#" class="">About Napkin</a> <a href="#" class="">Contact</a> </div> </div> <div class="gradient-border"> <a href="#" class="link-button">Get Napkin</a> </div> </div> </div> <div class="media-bar"> <span class="media-pad"> <a href="#" class="logo fb-logo"></a> </span> <span class="media-pad"> <a href="#" class="logo twitter-logo"></a> </span> <span class="media-pad"> <a href="#" class="logo linked-in-logo"></a> </span> </div> <div class="site-footer-copy-right"> <div class="copyright"> Copyright 2022 ©    |    <a href="#">Privacy Policy</a> </div> <div class="made-with"> Made with <span class="heart-inline"> </span> in NYC </div> </div> </div> </footer> <div class="sortcat-shadow"> </div> <script type="text/javascript" src="/assets/js/copy.js"></script> <script type="text/javascript" src="/assets/js/highlight-active-link.js"></script> </body> </html>
