--- a/user-manual/cli-reference/index.html
+++ b/user-manual/cli-reference/index.html
@@ -160,9 +160,9 @@ Global options:
                   [--callback-http-port CALLBACK_HTTP_PORT] 
                   [-S|--strict-mustache] [-C|--credentials-file FILE] 
                   [--skip-all | --force-all | --only SELECTOR | 
-                    --force-only SELECTOR] 
+                    <a href="#napkin-run---force-only">--force-only</a> SELECTOR] 
                   [--force SELECTOR | --force-with-downstream SELECTOR | 
-                    --enable SELECTOR | --skip SELECTOR] [-p|--show-progress] 
+                    <a href="#napkin-run---enable">--enable</a> SELECTOR | --skip SELECTOR] [-p|--show-progress] 
                   [-r|--dry-run] 
                   [--arg ARG=VALUE | --arg-json JSON | --arg-file FILE]
   Runs Napkin specs
@@ -223,7 +223,7 @@ Table selectors and SELECTOR types
   
   Table selectors allow performing partial spec runs. This can be useful during
   spec development. All options are applied in sequence to the execution plan.
-  <a href="#napkin-run---skip-all">--skip-all</a> , --force-all, --only, and --force-only options can be specified as
+  <a href="#napkin-run---skip-all">--skip-all</a>, --force-all, --only, and --force-only options can be specified as
   a first table selector only. --only, --force-only, --skip, --enable, --force,
   and --force-with-downstream options accept a SELECTOR, which can be one of:
     * unprocessed table name, as it was defined in the spec,
@@ -500,7 +500,7 @@ Available options:
   <a href="#napkin-dump--f,--force">-f,--force</a>               Force write to destination directory
   <a href="#napkin-dump--i,--generate-inserts">-i,--generate-inserts</a>    Generate inserts for tables instead of simply dumping
                            the query
-  <a href="#napkin-dump--e,--exclude-unmanaged-tables">-e,--exclude-unmanaged-tables</a> 
+  <a href="#napkin-dump--e,--exclude-unmanaged-tables">-e,--exclude-unmanaged-tables</a>
                            Show only managed tables in the DOT graph exclusively
   <a href="#napkin--S,--strict-mustache">-S,--strict-mustache</a>     Strict mustache validation mode
   <a href="#napkin-dump---use-spec-names">--use-spec-names</a>         Use unprocessed table names as filenames
